--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Галерея</title>
+  <link rel="stylesheet" href="/assets/css/style.css">
+</head>
+<body>
+  <div id="header"></div>
 
+  <main>
+    <h1>Галерея микроснимков</h1>
+    <div id="gallery" class="gallery"></div>
+  </main>
+
+  <div id="footer"></div>
+
+  <script src="/assets/js/template-loader.js"></script>
+  <script src="/assets/js/gallery.js"></script>
+</body>
+</html>
