--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Галерея</title>
+    <h1>Галерея</h1>
+
+  <label for="filter">Показать:</label>
+  <select id="filter">
+    <option value="all">Все</option>
+    <option value="photo">Фото</option>
+    <option value="video">Видео</option>
+  </select>
+
+  <div id="gallery" class="gallery"></div>
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
