--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Галерея</title>
-    <h1>Галерея</h1>
+    <main>
+  <h1>Галерея</h1>
 
   <label for="filter">Показать:</label>
   <select id="filter">
@@ -13,6 +14,7 @@
   </select>
 
   <div id="gallery" class="gallery"></div>
+</main>
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
