--- a/gallery.html
+++ b/gallery.html
@@ -6,12 +6,13 @@
     <main>
   <h1>Галерея</h1>
 
-  <label for="filter">Показать:</label>
-  <select id="filter">
-    <option value="all">Все</option>
-    <option value="photo">Фото</option>
-    <option value="video">Видео</option>
-  </select>
+<label for="category">Категория:</label>
+<select id="category">
+  <option value="all">Все</option>
+  <option value="Паразиты">Паразиты</option>
+  <option value="Гистология">Гистология</option>
+  <option value="Съёмка">Съёмка</option>
+</select>
 
   <div id="gallery" class="gallery"></div>
 </main>
